--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>Simple calculator</h1>
-    <input type="text" class="js-teksts">
+    <input type="number" class="js-teksts1">
     <button class="js-plus">Plus</button>
-    <button>Minus</button>
-    <button>Multiply</button>
-    <button>Divide</button>
-    <input type="text">
+    <button class="js-minus">Minus</button>
+    <button class="js-multiply">Multiply</button>
+    <button class="js-divide">Divide</button>
+    <input type="number" class="js-teksts2">
     <img src="" alt="Bart Simpson">
-    <p></p>
+    <p class="js-result"></p>
 </body>
 <script src="script.js"></script>
 </html>
