--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel= "stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Simple calculator</h1>
-    <input type="number" class="js-teksts1">
-    <button class="js-plus">Plus</button>
-    <button class="js-minus">Minus</button>
-    <button class="js-multiply">Multiply</button>
-    <button class="js-divide">Divide</button>
-    <input type="number" class="js-teksts2">
-    <img src="" alt="Bart Simpson">
-    <p class="js-result"></p>
+
+    <div>
+        <input type="number" class="js-teksts1">
+        <button class="js-plus">Plus</button>
+        <button class="js-minus">Minus</button>
+        <button class="js-multiply">Multiply</button>
+        <button class="js-divide">Divide</button>
+        <input type="number" class="js-teksts2">
+    </div>
+    
+    <div>
+        <img src="" alt="Bart Simpson">
+        <p class="js-result"></p>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
