--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <h1>Simple calculator</h1>
 
     <div>
-        <input type="number" class="js-teksts1">
+        <input type="number" class="js-teksts1 inputField" placeholder="Fiirst number">
         <button class="js-plus">Plus</button>
         <button class="js-minus">Minus</button>
         <button class="js-multiply">Multiply</button>
         <button class="js-divide">Divide</button>
-        <input type="number" class="js-teksts2">
+        <input type="number" class="js-teksts2 inputField" placeholder="Second number">
     </div>
     
     <div>
-        <img src="" alt="Bart Simpson">
+        <img src="Bart.png" alt="Bart Simpson" class="image">
         <p class="js-result"></p>
     </div>
 </body>
